Added temperature notebook and created ridgeline plot

--- a/notebooks/to-do.ipynb
+++ b/notebooks/to-do.ipynb
@@ -10,6 +10,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "088fa424",
+   "metadata": {},
+   "source": [
+    "__[Data Parameters]('https://openweathermap.org/history-bulk#parameter')__\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4d5fa179",
    "metadata": {},
    "source": [
@@ -55,14 +63,9 @@
     "## Temperature\n",
     "#### Very similar to precipitation: Outliers in this case are heatwaves and cold spells\n",
     "- How to measure ground thaw in spring?\n",
+    "- How to calculate frost?\n",
     "- How to relate temperature to bud swell / leaf out?\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6d67f692",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "code",
