wind cardinal directions

--- a/notebooks/to-do.ipynb
+++ b/notebooks/to-do.ipynb
@@ -26,7 +26,7 @@
     "- Units are correct\n",
     "    - Precip in inches\n",
     "    - Temp in Farenheit\n",
-    "    - Wind speed in mph? fps?\n",
+    "    - Leave wind in m/s as only the relationship matters for now\n",
     "    - Pressure ?\n",
     "    - Humidity ?"
    ]
