edited wind roses

--- a/notebooks/temperature.ipynb
+++ b/notebooks/temperature.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "aefe07bf",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "4c4072f3",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "691acc4b",
    "metadata": {},
    "outputs": [],
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "23c8ffef",
    "metadata": {},
    "outputs": [
@@ -128,7 +128,7 @@
     "               fontsize=20,\n",
     "               fontweight='bold')\n",
     "\n",
-    "plt.savefig(\"../images/daily_avg_temp_by_month.png\", dpi=500, format=\"png\")\n",
+    "# plt.savefig(\"../images/daily_avg_temp_by_month.png\", dpi=500, format=\"png\")\n",
     "\n",
     "plt.show()\n"
    ]
